Bug 211271 RDFServiceImpl::Init doesn't check the return value of PL_DHashTableInit r=alecf sr=dbaron